class was added

--- a/src/config.json
+++ b/src/config.json
@@ -2,23 +2,19 @@
   "classes": [
     "hello",
     "iloveyou",
-    "thankyou"
+    "thankyou",
+    "yes",
+    "no",
+    "food",
+    "sorry"
   ],
   "colors": [
-    [
-      41,
-      171,
-      202
-    ],
-    [
-      240,
-      172,
-      95
-    ],
-    [
-      131,
-      193,
-      103
-    ]
+    [41, 171, 202],
+    [240, 172, 95],
+    [131, 193, 103],
+    [255, 105, 180],
+    [255, 215, 0],
+    [148, 0, 211],
+    [255, 69, 0]
   ]
 }
